impl: PatchMe. add USER_UPDATED Event.
